git commit -m “second commit” .

--- a/bubblebirds.html
+++ b/bubblebirds.html
@@ -11,12 +11,12 @@
 	<head>
 
 		<!-- Title -->
-		<title>Bubble Birds | Nui - Creative Portfolio Showcase HTML Website Template by Themetorium</title>
+		<title>Bubble Birds | Timeless Louis</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Download Nui - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium.">
-		<meta name="author" content="themetorium.net">
+		<meta name="description" content="Portfolio">s
+		<meta name="author" content="timelesslouis.com">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -144,7 +144,6 @@
 												<li class="active"><a href="index.html">Home</a></li>
 												<li class="active"><a href="about.html">About</a></li>
 												<li class="active"><a href="portfolio.html">Portfolio</a></li>
-												<li class="active"><a href="blog.html">Blog</a></li>
 												<li class="active"><a href="contact.html">Contact</a></li>
 											</ul>
 											<!-- End menu list -->
