--- a/roampin.html
+++ b/roampin.html
@@ -11,12 +11,12 @@
 	<head>
 
 		<!-- Title -->
-		<title>The Chase | Nui - Creative Portfolio Showcase HTML Website Template by Themetorium</title>
+		<title>Roam Pin | Timeless Louis</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Download Nui - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium.">
-		<meta name="author" content="themetorium.net">
+		<meta name="description" content="Portfolio">
+		<meta name="author" content="timelesslouis.com">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -144,7 +144,6 @@
 												<li class="active"><a href="index.html">Home</a></li>
 												<li class="active"><a href="about.html">About</a></li>
 												<li class="active"><a href="portfolio.html">Portfolio</a></li>
-												<li class="active"><a href="blog.html">Blog</a></li>
 												<li class="active"><a href="contact.html">Contact</a></li>
 											</ul>
 											<!-- End menu list -->
@@ -284,7 +283,8 @@
 										<h2 class="anim-fadeinup">About the Project</h2>
 
 										<div class="anim-fadeinup text-lg">
-											<p>Remain valley who mrs uneasy remove wooded him you. Her questions favourite him concealed. We to wife face took he. The taste begin early old why since dried can first. Prepared as or humoured formerly. Love mrs true get post. Express village evening prudent my hundred forming.</p>
+											<p>I partnered with RoamPin to create an Identity for their latest web, social, and print media campaigns.</p>
+											<p>RoamPin is your ultimate travel companion for young and vibrant explorers. Discover hidden gems and unforgettable experiences with personalized itineraries, local insights, and trendy hotspots. Embrace adventure and make every trip memorable with RoamPin!</p>
 										</div>
 
 									</div> <!-- /.tt-col -->
@@ -313,7 +313,7 @@
 									<figure>
 										<img class="anim-image-parallax tt-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/portfolio/single-project/project-2/project-2-1.jpg" alt="image">
 										<figcaption>
-											Image Caption
+											UI/UX Site Image
 										</figcaption>
 									</figure>
 								</div> 
