--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
 	<head>
 
 		<!-- Title -->
-		<title>Contact | Nui - Creative Portfolio Showcase HTML Website Template by Themetorium</title>
+		<title>Contact | Timeless Louis</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Download Nui - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium.">
-		<meta name="author" content="themetorium.net">
+		<meta name="description" content="Portfolio">
+		<meta name="author" content="timelesslouis.com">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -133,7 +133,7 @@
 							* Use class "tt-ol-menu-count" to enable menu counter.
 							-->
 							<nav class="tt-overlay-menu tt-ol-menu-count">
-								<div class="tt-ol-menu-ghost">Explore</div>
+								<div class="tt-ol-menu-ghost">Contact</div>
 								<div class="tt-ol-menu-holder">
 									<div class="tt-ol-menu-inner tt-wrap">
 										<div class="tt-ol-menu-content">
@@ -144,7 +144,6 @@
 												<li class="active"><a href="index.html">Home</a></li>
 												<li class="active"><a href="about.html">About</a></li>
 												<li class="active"><a href="portfolio.html">Portfolio</a></li>
-												<li class="active"><a href="blog.html">Blog</a></li>
 												<li class="active"><a href="contact.html">Contact</a></li>
 											</ul>
 											<!-- End menu list -->
@@ -321,9 +320,9 @@
 										<form id="tt-contact-form" class="tt-form-filled anim-fadeinup">
 
 											<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
-											<input type="hidden" name="project_name" value="yourwebsiteaddress.com"> <!-- Change value to your site name -->
-											<input type="hidden" name="admin_email" value="your@email.com"> <!-- Change value to your valid email address (where a message will be sent) -->
-											<input type="hidden" name="form_subject" value="Message from yourwebsiteaddress.com"> <!-- Change value to your own message subject -->
+											<input type="hidden" name="project_name" value="timelesslouis.com"> <!-- Change value to your site name -->
+											<input type="hidden" name="admin_email" value="james@timelesslouis.com"> <!-- Change value to your valid email address (where a message will be sent) -->
+											<input type="hidden" name="form_subject" value="Message from timelesslouis.com"> <!-- Change value to your own message subject -->
 											<!-- End Hidden Required Fields -->
 
 											<div class="tt-row">
