--- a/saintlogos.html
+++ b/saintlogos.html
@@ -11,12 +11,12 @@
 	<head>
 
 		<!-- Title -->
-		<title>Fashion Shoot | Nui - Creative Portfolio Showcase HTML Website Template by Themetorium</title>
+		<title>Saint Logos | Portfolio</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Download Nui - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium.">
-		<meta name="author" content="themetorium.net">
+		<meta name="description" content="Portfolio">
+		<meta name="author" content="timelesslouis.com">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -144,7 +144,6 @@
 												<li class="active"><a href="index.html">Home</a></li>
 												<li class="active"><a href="about.html">About</a></li>
 												<li class="active"><a href="portfolio.html">Portfolio</a></li>
-												<li class="active"><a href="blog.html">Blog</a></li>
 												<li class="active"><a href="contact.html">Contact</a></li>
 											</ul>
 											<!-- End menu list -->
@@ -298,7 +297,8 @@
 									<div class="tt-col-lg-8">
 
 										<div class="anim-fadeinup">
-											<p>Whole every miles as tiled at seven or. Wished he entire esteem mr oh by. Possible bed you pleasure civility boy elegance ham. He prevent request by if in pleased. Picture too and concern has was comfort. Ten difficult resembled eagerness nor. Same park bore on be. Warmth his law design say are person. Welcomed humoured rejoiced.</p>
+											<p>Developed a brand identity for a faith-based sportswear line that resonates with its target audience.</p>
+											<p>Saint Logos is a cutting-edge sportswear brand that blends the vibrant energy of streetwear with the sophistication of high-end fashion. The brand redefines activewear, inspiring individuals to embrace their personal style while pursuing fitness goals.</p>
 										</div>
 
 										<!-- Begin project info list
