--- a/bubblebirds.html
+++ b/bubblebirds.html
@@ -15,7 +15,7 @@
 
 		<!-- Meta -->
 		<meta charset="utf-8">
-		<meta name="description" content="Portfolio">s
+		<meta name="description" content="Portfolio">
 		<meta name="author" content="timelesslouis.com">
 
 		<!-- Mobile Meta -->
