--- a/bubblebirds.html
+++ b/bubblebirds.html
@@ -296,7 +296,8 @@
 									<div class="tt-col-lg-8">
 
 										<div class="anim-fadeinup">
-											<p>Whole every miles as tiled at seven or. Wished he entire esteem mr oh by. Possible bed you pleasure civility boy elegance ham. He prevent request by if in pleased. Picture too and concern has was comfort. Ten difficult resembled eagerness nor. Same park bore on be. Warmth his law design say are person. Welcomed humoured rejoiced.</p>
+											<p>I collaborated with Bubble Birds to create fun, quirky love bird graphics for their audience!</p>
+											<p>Bubble Birds is your go-to spot for young electric love, sparking laughter and joy! With a photo booth for those “we’re in love” moments, cute couple outfits, and merch even Cupid would envy, it’s the perfect place for lovebirds to celebrate their romance!</p>
 										</div>
 
 										<!-- Begin project info list
