--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 													* Use class "pgi-image-is-light" if needed, it makes the caption visible better if you use light image (only effect if "pgi-cap-inside" is enabled on "portfolio-grid"! Also no effect on small screens!).
 													-->
 													<div class="portfolio-grid-item">
-														<a href="single-project-1.html" class="pgi-image-wrap" data-cursor="View<br>Project">
+														<a href="bubblebirds.html" class="pgi-image-wrap" data-cursor="View<br>Project">
 															<!-- Use class "cover-opacity-*" to set image overlay if needed. For example "cover-opacity-2". Useful if class "pgi-cap-inside" is enabled on "portfolio-grid". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
@@ -301,7 +301,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="single-project-1.html">Bubble Birds</a>
+																	<a href="bubblebirds.html">Bubble Birds</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Romance</div>
@@ -326,7 +326,7 @@
 													* Use class "pgi-image-is-light" if needed, it makes the caption visible better if you use light image (only effect if "pgi-cap-inside" is enabled on "portfolio-grid"!).
 													-->
 													<div class="portfolio-grid-item">
-														<a href="single-project-2.html" class="pgi-image-wrap" data-cursor="View<br>Project">
+														<a href="roampin.html" class="pgi-image-wrap" data-cursor="View<br>Project">
 															<!-- Use class "cover-opacity-*" to set image overlay if needed. For example "cover-opacity-2". Useful if class "pgi-cap-inside" is enabled on "portfolio-grid". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
@@ -340,7 +340,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="single-project-2.html">Roam Pin</a>
+																	<a href="roampin.html">Roam Pin</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Adventure Brand</div>
@@ -382,7 +382,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="single-project-3.html">Fashion Shoot</a>
+																	<a href="index.html">Fashion Shoot</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">People</div>
@@ -407,7 +407,7 @@
 													* Use class "pgi-image-is-light" if needed, it makes the caption visible better if you use light image (only effect if "pgi-cap-inside" is enabled on "portfolio-grid"!).
 													-->
 													<div class="portfolio-grid-item">
-														<a href="single-project-4.html" class="pgi-image-wrap" data-cursor="View<br>Project">
+														<a href="saintlogos.html" class="pgi-image-wrap" data-cursor="View<br>Project">
 															<!-- Use class "cover-opacity-*" to set image overlay if needed. For example "cover-opacity-2". Useful if class "pgi-cap-inside" is enabled on "portfolio-grid". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 															<div class="pgi-image-holder">
 																<div class="pgi-image-inner anim-zoomin">
@@ -421,7 +421,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="single-project-4.html">Saint Logos</a>
+																	<a href="saintlogos.html">Saint Logos</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Sportwear Brand</div>
