--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
 								<div class="text-xxlg">
 									<h2 class="anim-fadeinup">Hello, Friend!</h2>
 
-									<p class="anim-fadeinup">My name is <em>James Louis Herron IV</em>. Do in laughter no mr hastened <a href="https://themetorium.net" target="_blank" rel="noopener">premium website templates</a>. Started on society an brought it explain. Position two saw greatest stronger design. Pianoforte if at simplicity do estimating. Debating me breeding be answered.</p>
+									<p class="anim-fadeinup">My name is <em>James Louis Herron IV</em>. Do in laughter no mr hastened <a href="https://my.linkpod.site/JamesLH-Resume" target="_blank" rel="noopener">premium website templates</a>. Started on society an brought it explain. Position two saw greatest stronger design. Pianoforte if at simplicity do estimating. Debating me breeding be answered.</p>
 
 									<p class="anim-fadeinup">As collected deficient objection by it discovery sincerity curiosity. Quiet decay who round three world whole has mrs man. Built the china there tried jokes which gay why. Assure in adieus wicket it is. But spoke round point and one joy. Offending her moonlight men sweetness see unwilling.</p>
 
