--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
 									* Change data attributes (data-url="...", data-title="...", data-category="...") according to your needs.
 									* Use class "psi-image-is-light" if needed, it makes the elements dark and more visible if you use a very light image.
 									-->
-									<div class="swiper-slide" data-url="roampin.html" data-title="Roam Pin" data-category="Adventure Brand">
+									<div class="swiper-slide" data-url="roampin.html" data-title="Roam<br> Pin" data-category="Adventure Brand">
 										<!-- Use class "cover-opacity-*" to set an image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". -->
 										<div class="tt-portfolio-slider-item cover-opacity-4" data-swiper-parallax="50%">
 											<img class="tt-psi-image swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/portfolio/1920/portfolio-2.jpg" alt="Image">
