--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 								<a href="index.html">
 									<!-- Hint: You may need to change the img height to match your logo type. You can do this from the "theme.css" file (find: ".tt-logo img"). -->
 									<img src="assets/img/logo-wht.png" class="tt-logo-wht magnetic-item" alt="Logo"> <!-- logo light -->
-									<img src="assets/img/logo-blk.png" class="tt-logo-blk magnetic-item" alt="Logo"> <!-- logo dark -->
+									<img src="assets/img/logo-blk-dark.png" class="tt-logo-blk-dark magnetic-item" alt="Logo"> <!-- logo dark -->
 								</a>
 							</div>
 							<!-- End logo -->
