--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
 									<!-- Begin scrolling button (See all works)
 									============================ -->
-									<a href="portfolio-grid-creative.html" class="tt-scrolling-btn all-works-btn" data-cursor="All<br>Works">
+									<a href="portfolio.html" class="tt-scrolling-btn all-works-btn" data-cursor="All<br>Works">
 										<div class="scr-btn-inner ph-appear">
 											<div class="scr-btn-icon"><i class="fas fa-arrow-right"></i></div>
 											<div class="scr-btn-spinner">
