--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 				<div class="ptr-preloader">
 					<div class="ptr-prel-content">
 						<!-- Hint: You may need to change the img height and opacity to match your logo type. You can do this from the "theme.css" file (find: ".ptr-prel-image"). -->
-						<img src="assets/img/logo-light.png" class="ptr-prel-image tt-logo-light" alt="Logo">
+						<img src="assets/img/time-light.png" class="ptr-prel-image tt-logo-light" alt="Logo">
 					</div> <!-- /.ptr-prel-content -->
 				</div> <!-- /.ptr-preloader -->
 			</div>
@@ -104,8 +104,8 @@
 							<div class="tt-logo"> 
 								<a href="index.html">
 									<!-- Hint: You may need to change the img height to match your logo type. You can do this from the "theme.css" file (find: ".tt-logo img"). -->
-									<img src="assets/img/logo-light.png" class="tt-logo-light magnetic-item" alt="Logo"> <!-- logo light -->
-									<img src="assets/img/logo-dark.png" class="tt-logo-dark magnetic-item" alt="Logo"> <!-- logo dark -->
+									<img src="assets/img/time-light.png" class="tt-logo-light magnetic-item" alt="Logo"> <!-- logo light -->
+									<img src="assets/img/time-dark.png" class="tt-logo-dark magnetic-item" alt="Logo"> <!-- logo dark -->
 								</a>
 							</div>
 							<!-- End logo -->
@@ -264,8 +264,8 @@
 								</div>
 
 								<div class="tt-signature anim-fadeinup margin-top-40">
-									<img src="assets/img/signature-wht.png" class="tt-signature-wht" alt="Signature">
-									<img src="assets/img/signature-blk.png" class="tt-signature-blk" alt="Signature">
+									<img src="assets/img/signature-light.png" class="tt-signature-light" alt="Signature">
+									<img src="assets/img/signature-dark.png" class="tt-signature-dark" alt="Signature">
 								</div>
 
 							</div> <!-- /.tt-section-inner -->
