--- a/about.html
+++ b/about.html
@@ -264,8 +264,8 @@
 								</div>
 
 								<div class="tt-signature anim-fadeinup margin-top-40">
-									<img src="assets/img/signature-light.png" class="tt-signature-light" alt="Signature">
-									<img src="assets/img/signature-dark.png" class="tt-signature-dark" alt="Signature">
+									<img src="assets/img/tl-light.png" class="tt-signature-light" alt="Signature">
+									<img src="assets/img/tl-dark.png" class="tt-signature-dark" alt="Signature">
 								</div>
 
 							</div> <!-- /.tt-section-inner -->
