--- a/index.html
+++ b/index.html
@@ -667,69 +667,7 @@
 								</div>
 								<!-- End tt-Heading -->
 
-								<!-- Begin form 
-								================ 
-								* Use class "tt-form-filled" or "tt-form-minimal" to change form style.
-								* Use class "tt-form-sm" or "tt-form-lg" to change form size (no class = default size).
-								-->
-								<form id="tt-contact-form" class="tt-form-filled anim-fadeinup">
-
-									<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
-									<input type="hidden" name="project_name" value="timelesslouis.com"> <!-- Change value to your site name -->
-									<input type="hidden" name="admin_email" value="james@timelesslouis.com"> <!-- Change value to your valid email address (where a message will be sent) -->
-									<input type="hidden" name="form_subject" value="Message from timelesslouis.com"> <!-- Change value to your own message subject -->
-									<!-- End Hidden Required Fields -->
-
-									<div class="tt-row">
-										<div class="tt-col-md-6">
-
-											<div class="tt-form-group">
-												<label>Your Name <span class="required">*</span></label>
-												<input class="tt-form-control" type="text" name="Name" placeholder="" required>
-											</div>
-
-										</div> <!-- /.tt-col -->
-
-										<div class="tt-col-md-6">
-
-											<div class="tt-form-group">
-												<label>Email address <span class="required">*</span></label>
-												<input class="tt-form-control" type="email" name="Email" placeholder="" required>
-											</div>
-
-										</div> <!-- /.tt-col -->
-									</div> <!-- /.tt-row -->
-
-									<div class="tt-form-group">
-										<label>Subject <span class="required">*</span></label>
-										<input class="tt-form-control" type="text" name="Subject" placeholder="" required>
-									</div>
-
-									<!-- <div class="tt-form-group">
-										<label>Select an option <span class="required">*</span></label>
-										<select class="tt-form-control" name="option" required>
-											<option value="" disabled selected>Please choose an option</option>
-											<option value="Say Hello">Say hello</option>
-											<option value="New Project">New project</option>
-											<option value="Feedback">Feedback</option>
-											<option value="Other">Other</option>
-										</select>
-									</div> -->
-
-									<div class="tt-form-group">
-										<label>Your Message <span class="required">*</span></label>
-										<textarea class="tt-form-control" rows="5" name="Message" placeholder="" required></textarea>
-									</div>
-
-									<small class="tt-form-text"><em>Fields marked with an asterisk (*) are required!</em></small>
-
-									<button type="submit" class="tt-btn tt-btn-primary margin-top-30">
-										<div data-hover="Send Message">Send Message</div>
-										<span class="tt-btn-icon"><i class="fas fa-paper-plane"></i></span>
-									</button>
-								</form>
-								<!-- End form -->
-
+								
 							</div> <!-- /.tt-section-inner -->
 						</div>
 						<!-- End tt-section -->
@@ -817,7 +755,16 @@
 		<!-- ====================
 		///// Scripts below /////
 		===================== -->
-
+<div 
+  data-chat-widget 
+  data-widget-id="670b5482b82479737a7ffe2b" 
+  data-location-id="QPWwFuaFmEDDecP6JlTN"  > 
+ </div> 
+<script 
+  src="https://widgets.leadconnectorhq.com/loader.js"  
+  data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
+ data-widget-id="670b5482b82479737a7ffe2b"  > 
+ </script>
 		<!-- Core JS -->
 		<script src="assets/vendor/jquery/jquery.min.js"></script> <!-- jquery JS (https://jquery.com) -->
 
