--- a/about.html
+++ b/about.html
@@ -256,11 +256,9 @@
 								<div class="text-xxlg">
 									<h2 class="anim-fadeinup">Hello, Friend!</h2>
 
-									<p class="anim-fadeinup">My name is <em>James Louis Herron IV</em>. Do in laughter no mr hastened <a href="https://my.linkpod.site/JamesLH-Resume" target="_blank" rel="noopener">premium website templates</a>. Started on society an brought it explain. Position two saw greatest stronger design. Pianoforte if at simplicity do estimating. Debating me breeding be answered.</p>
+									<p class=”anim-fadeinup”>With seven years of experience in brand design, I specialize in working with fashion and e-commerce brands to elevate their market presence. My passion for innovation extends beyond design; I played a pivotal role in helping a non-profit organization raise half a million dollars to support children in probation and foster care.</p>
 
-									<p class="anim-fadeinup">As collected deficient objection by it discovery sincerity curiosity. Quiet decay who round three world whole has mrs man. Built the china there tried jokes which gay why. Assure in adieus wicket it is. But spoke round point and one joy. Offending her moonlight men sweetness see unwilling.</p>
-
-									<p class="anim-fadeinup">Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening.</p>
+									<p class="anim-fadeinup">I thrive on bringing creative solutions to the marketplace that not only innovate daily life but also reshape how we view the world. My academic background in branding, combined with hands-on experience assisting founders and local businesses, has equipped me with the skills to help others recognize and harness the true value of their brands.</p>
 								</div>
 
 								<div class="tt-signature anim-fadeinup margin-top-40">
@@ -339,46 +337,6 @@
 								</div> <!-- /.footer-col-inner -->
 							</div>
 							<!-- Begin footer column -->
-
-							<!-- Begin footer column 
-							========================= -->
-							<div class="footer-col tt-align-center-right">
-								<div class="footer-col-inner">
-
-									<div class="footer-social">
-										<div class="footer-social-text"><span>Follow</span><i class="fas fa-share-alt"></i></div>
-										<div class="social-buttons">
-											<ul>
-												<li><a href="https://www.facebook.com/themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a></li>
-												<li><a href="https://twitter.com/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a></li>
-												<li><a href="https://www.youtube.com/" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a></li>
-												<li><a href="https://dribbble.com/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-dribbble"></i></a></li>
-												<li><a href="https://www.behance.net/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-behance"></i></a></li>
-											</ul>
-										</div> <!-- /.social-buttons -->
-									</div> <!-- /.footer-social -->
-
-								</div> <!-- /.footer-col-inner -->
-							</div>
-							<!-- Begin footer column -->
-
-						</div> <!-- /.tt-section-inner -->
-					</footer>
-					<!-- End tt-footer -->
-
-
-				</div>
-				<!-- End content wrap -->
-
-			</div>
-			<!-- End scroll container -->
-
-
-		</main>
-		<!-- End body inner -->
-
-
-        
 
 		<!-- ====================
 		///// Scripts below /////
