--- a/index.html
+++ b/index.html
@@ -713,58 +713,25 @@
 							</div>
 							<!-- Begin footer column -->
 
-							<!-- Begin footer column 
-							========================= -->
-							<div class="footer-col tt-align-center-right">
-								<div class="footer-col-inner">
-
-									<div class="footer-social">
-										<div class="footer-social-text"><span>Follow</span><i class="fas fa-share-alt"></i></div>
-										<div class="social-buttons">
-											<ul>
-												<li><a href="https://www.facebook.com/themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a></li>
-												<li><a href="https://twitter.com/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a></li>
-												<li><a href="https://www.youtube.com/" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-youtube"></i></a></li>
-												<li><a href="https://dribbble.com/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-dribbble"></i></a></li>
-												<li><a href="https://www.behance.net/Themetorium" class="magnetic-item" target="_blank" rel="noopener"><i class="fab fa-behance"></i></a></li>
-											</ul>
-										</div> <!-- /.social-buttons -->
-									</div> <!-- /.footer-social -->
-
-								</div> <!-- /.footer-col-inner -->
-							</div>
-							<!-- Begin footer column -->
-
-						</div> <!-- /.tt-section-inner -->
-					</footer>
-					<!-- End tt-footer -->
-
-
-				</div>
-				<!-- End content wrap -->
-
-			</div>
-			<!-- End scroll container -->
-
-		</main>
-		<!-- End body inner -->
-
-
-        
-
+	
 		<!-- ====================
 		///// Scripts below /////
 		===================== -->
-<div 
-  data-chat-widget 
-  data-widget-id="670b5482b82479737a7ffe2b" 
-  data-location-id="QPWwFuaFmEDDecP6JlTN"  > 
- </div> 
-<script 
-  src="https://widgets.leadconnectorhq.com/loader.js"  
-  data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
- data-widget-id="670b5482b82479737a7ffe2b"  > 
- </script>
+		<div class="tt-section chat-widget-container padding-bottom-45">
+    		<div 
+      			data-chat-widget 
+      			data-widget-id="670b5482b82479737a7ffe2b" 
+      			data-location-id="QPWwFuaFmEDDecP6JlTN"> 
+    		</div> 
+
+    		<script 
+      			src="https://widgets.leadconnectorhq.com/loader.js"  
+      			data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
+      			data-widget-id="670b5482b82479737a7ffe2b"> 
+    		</script>
+		</div>
+
+
 		<!-- Core JS -->
 		<script src="assets/vendor/jquery/jquery.min.js"></script> <!-- jquery JS (https://jquery.com) -->
 
