--- a/about.html
+++ b/about.html
@@ -321,7 +321,10 @@
 								</div> <!-- /.footer-col-inner -->
 							</div>
 							<!-- Begin footer column -->
-
+                                <div class="footer-col tt-align-center-right">
+								<div class="footer-col-inner">
+									</div>
+									</div>
 							<!-- Begin footer column 
 							========================= -->
 							<div class="footer-col tt-align-center order-m-last">
@@ -337,6 +340,24 @@
 								</div> <!-- /.footer-col-inner -->
 							</div>
 							<!-- Begin footer column -->
+
+						</div> <!-- /.tt-section-inner -->
+					</footer>
+					<!-- End tt-footer -->
+
+
+				</div>
+				<!-- End content wrap -->
+
+			</div>
+			<!-- End scroll container -->
+
+
+		</main>
+		<!-- End body inner -->
+
+
+        
 
 		<!-- ====================
 		///// Scripts below /////
