--- a/portfolio.html
+++ b/portfolio.html
@@ -307,6 +307,24 @@
 								</div> <!-- /.footer-col-inner -->
 							</div>
 							<!-- Begin footer column -->
+
+						</div> <!-- /.tt-section-inner -->
+					</footer>
+					<!-- End tt-footer -->
+
+
+				</div>
+				<!-- End content wrap -->
+
+			</div>
+			<!-- End scroll container -->
+
+
+		</main>
+		<!-- End body inner -->
+
+
+
         
 
 		<!-- ====================
