--- a/roampin.html
+++ b/roampin.html
@@ -617,8 +617,11 @@
 
 								</div> <!-- /.footer-col-inner -->
 							</div>
-							<!-- Begin footer column -->
-
+								<!-- Begin footer column -->
+                                <div class="footer-col tt-align-center-right">
+								<div class="footer-col-inner">
+									</div>
+									</div>
 							<!-- Begin footer column 
 							========================= -->
 							<div class="footer-col tt-align-center order-m-last">
@@ -627,14 +630,32 @@
 									<div class="tt-copyright text-gray">
 										<a href="https://timelesslouis.com" target="_blank" rel="noopener" class="tt-btn tt-btn-link">
 											<span class="tt-btn-icon"><i class="far fa-copyright"></i></span>
-											<div data-hover="Timelesslouis.com">2024 Timeless Louis, Inc. All Rights Reserved</div>
+											<div data-hover="Timelesslouis.com">Timelesslouis.com</div>
 										</a>
 									</div>
 
 								</div> <!-- /.footer-col-inner -->
 							</div>
 							<!-- Begin footer column -->
+
+						</div> <!-- /.tt-section-inner -->
+					</footer>
+					<!-- End tt-footer -->
+
+
+				</div>
+				<!-- End content wrap -->
+
+			</div>
+			<!-- End scroll container -->
+
+
+		</main>
+		<!-- End body inner -->
+
+
         
+
 		<!-- ====================
 		///// Scripts below /////
 		===================== -->
