--- a/index.html
+++ b/index.html
@@ -695,8 +695,11 @@
 
 								</div> <!-- /.footer-col-inner -->
 							</div>
-							<!-- Begin footer column -->
-
+								<!-- Begin footer column -->
+                                <div class="footer-col tt-align-center-right">
+								<div class="footer-col-inner">
+									</div>
+									</div>
 							<!-- Begin footer column 
 							========================= -->
 							<div class="footer-col tt-align-center order-m-last">
@@ -713,11 +716,27 @@
 							</div>
 							<!-- Begin footer column -->
 
-	
+						</div> <!-- /.tt-section-inner -->
+					</footer>
+					<!-- End tt-footer -->
+
+
+				</div>
+				<!-- End content wrap -->
+
+			</div>
+			<!-- End scroll container -->s
+
+		</main>
+		<!-- End body inner -->
+
+
+        
+
 		<!-- ====================
 		///// Scripts below /////
 		===================== -->
-		<div class="tt-section chat-widget-container padding-bottom-45">
+		<div class="chat-widget-container">
     		<div 
       			data-chat-widget 
       			data-widget-id="670b5482b82479737a7ffe2b" 
@@ -729,7 +748,7 @@
       			data-resources-url="https://widgets.leadconnectorhq.com/chat-widget/loader.js" 
       			data-widget-id="670b5482b82479737a7ffe2b"> 
     		</script>
-		</div>
+			</div>
 
 
 		<!-- Core JS -->
