--- a/contact.html
+++ b/contact.html
@@ -270,7 +270,7 @@
 										<!-- End tt-Heading -->
 
 										<div class="text-gray anim-fadeinup">
-											<p>Manor we shall merit by chief wound no or would. Oh towards between subject passage sending mention or it.</p>
+											<p>Let’s connect and turn your ideas into a timeless masterpiece! I promise it’ll be more fun than a cat video binge. Reach out, and let’s create something unforgettable together!</p>
 										</div>
 
 										<!-- Begin contact info 
