--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="index.html">Fashion Shoot</a>
+																	<a href="index.html">Comming soon!</a>
 																</h2>
 																<div class="pgi-categories-wrap">
-																	<div class="pgi-category">People</div>
+																	<div class="pgi-category">Production Shoot</div>
 																	<!-- <div class="pgi-category">Varia</div> -->
 																</div> <!-- /.pli-categories-wrap -->
 															</div> <!-- /.pgi-caption-inner -->
@@ -615,8 +615,8 @@
 								Use class "scr-text-stroke" to enable text stroke style (no effect on smaller screens!). 
 								-->
 								<div class="tt-scrolling-text" data-scroll-speed="10">
-									<div class="tt-scrolling-text-inner" data-text="We are now avalible →">
-										We are now avalible →
+									<div class="tt-scrolling-text-inner" data-text="Currently avalible for projects →">
+										Currently avalible for projects →
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
