--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 														<div class="pgi-caption">
 															<div class="pgi-caption-inner">
 																<h2 class="pgi-title">
-																	<a href="index.html">Comming soon!</a>
+																	<a href="index.html">Coming soon!</a>
 																</h2>
 																<div class="pgi-categories-wrap">
 																	<div class="pgi-category">Production Shoot</div>
