--- a/saintlogos.html
+++ b/saintlogos.html
@@ -392,7 +392,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-3/project-3-2.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-3/project-3-2.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -436,7 +436,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-3/project-3-4.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-3/project-3-4.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -480,7 +480,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-3/project-3-6.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-3/project-3-6.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -524,7 +524,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-3/project-3-8.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-3/project-3-8.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -568,7 +568,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-3/project-3-10.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-3/project-3-10.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
