--- a/bubblebirds.html
+++ b/bubblebirds.html
@@ -391,7 +391,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-1/project-1-2.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-1/project-1-2.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -435,7 +435,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-1/project-1-4.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-1/project-1-4.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -479,7 +479,7 @@
 
 													<!-- Begin tt-Gallery item 
 													=========================== -->
-													<a href="assets/img/portfolio/single-project/project-1/project-1-6.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="Yes, you can use image captions. :)">
+													<a href="assets/img/portfolio/single-project/project-1/project-1-6.jpg" class="tt-gallery-item lg-trigger" data-cursor="View" data-sub-html="">
 														<div class="tt-gallery-item-inner">
 															<div class="tt-gallery-image-wrap">
 																<figure class="tt-gallery-image ttgr-height">
@@ -517,11 +517,11 @@
 							<div class="tt-section-inner tt-wrap max-width-900 text-center">
 
 								<div class="anim-fadeinup text-xlg">
-									<p>Wise busy past both park when an ye no. Nay likely her length sooner thrown sex lively income. The expense windows adapted sir. Wrong widen drawn ample eat off doors money.</p>
+									<p>Inspired by my wife's love for cute matching outfits, I created Bubble Birds as a fun one-stop shop for couples to express their feelings through stylish coordinated looks, memorable photo shoots, and matching jewelry. Designing the brand was an absolute joy, allowing me to bring our vision to life with creativity and playfulness!</p>
 								</div>
 
-								<a href="https://themetorium.net" class="tt-btn tt-btn-primary margin-top-20 anim-fadeinup" target="_blank" rel="noopener">
-									<div data-hover="Read More">Read More</div>
+								<a href="https://timelesslouis.com/bubblebirds.html" class="tt-btn tt-btn-primary margin-top-20 anim-fadeinup" target="_blank" rel="noopener">
+									<div data-hover="Read More">Blog Coming</div>
 									<span class="tt-btn-icon"><i class="fas fa-arrow-right"></i></span>
 								</a>
 
