--- a/roampin.html
+++ b/roampin.html
@@ -336,7 +336,7 @@
 										<div class="tt-col-lg-8">
 
 											<div class="anim-fadeinup text-lg">
-												<p>It real sent your at. Amounted all shy set why followed declared. Repeated of endeavor mr position kindness offering ignorant so up. Simplicity are melancholy preference considered saw companions. Disposal on outweigh do speedily in on.</p>
+												<p>Roam Pin was designed to evoke the feeling of curating a trip straight into your scrapbook, with quirky design elements that embody an organic and youthful vibe.</p>
 											</div>
 
 										</div> <!-- /.tt-col -->
@@ -541,9 +541,7 @@
 									<div class="tt-col-lg-8">
 
 										<div class="anim-fadeinup text-lg">
-											<p>Invitation on an advantages collecting. But event old above shy bed noisy. Had sister see wooded favour income has. Stuff rapid since do as hence. Too insisted ignorant procured remember are believed.</p>
-
-											<p>Many thans to <a href="https://www.behance.net/patrickcurtet" target="_blank" rel="noopener">MP Curtet</a>.</p>
+											<p><p>Roam Pin was inspired by my lifelong love for food, passed down from my adventurous parents. My wife and I enjoy exploring new flavors and vibrant cities that feel like home. Designing this brand has been a blast, aimed at a young adult audience because, we still believe we're pretty youthful ourselves!</p>											
 										</div>
 
 									</div> <!-- /.tt-col -->
