--- a/saintlogos.html
+++ b/saintlogos.html
@@ -606,7 +606,7 @@
 							<div class="tt-section-inner tt-wrap max-width-900 text-center">
 
 								<div class="anim-fadeinup text-xlg">
-									<p>Wise busy past both park when an ye no. Nay likely her length sooner thrown sex lively income. The expense windows adapted sir. Wrong widen drawn ample eat off doors money.</p>
+									<p>Saint Logos is inspired by the relentless drive of professional athletes, embodying a commitment to faith and perseverance. This brand empowers you to give your all on the court, igniting confidence and keeping your focus where it matters most on the game.</p>
 								</div>
 
 								<a href="https://themetorium.net" class="tt-btn tt-btn-primary margin-top-20 anim-fadeinup" target="_blank" rel="noopener">
