--- a/saintlogos.html
+++ b/saintlogos.html
@@ -609,8 +609,8 @@
 									<p>Saint Logos is inspired by the relentless drive of professional athletes, embodying a commitment to faith and perseverance. This brand empowers you to give your all on the court, igniting confidence and keeping your focus where it matters most on the game.</p>
 								</div>
 
-								<a href="https://themetorium.net" class="tt-btn tt-btn-primary margin-top-20 anim-fadeinup" target="_blank" rel="noopener">
-									<div data-hover="Read More">Read More</div>
+								<a href="https://https://timelesslouis.com/saintlogos.html" class="tt-btn tt-btn-primary margin-top-20 anim-fadeinup" target="_blank" rel="noopener">
+									<div data-hover="Read More">Blog Coming</div>
 									<span class="tt-btn-icon"><i class="fas fa-arrow-right"></i></span>
 								</a>
 
