--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 				<!-- End content wrap -->
 
 			</div>
-			<!-- End scroll container -->s
+			<!-- End scroll container -->
 
 		</main>
 		<!-- End body inner -->
