--- a/roampin.html
+++ b/roampin.html
@@ -541,7 +541,7 @@
 									<div class="tt-col-lg-8">
 
 										<div class="anim-fadeinup text-lg">
-											<p><p>Roam Pin was inspired by my lifelong love for food, passed down from my adventurous parents. My wife and I enjoy exploring new flavors and vibrant cities that feel like home. Designing this brand has been a blast, aimed at a young adult audience because, we still believe we're pretty youthful ourselves!</p>											
+											<p><p>Roam Pin was inspired by my lifelong love for food, passed down from my adventurous parents. My wife and I enjoy exploring new flavors and vibrant cities that feel like home. Designing this brand has been a blast, aimed at a young adult audience because, we still believe we're pretty youthful!</p>											
 										</div>
 
 									</div> <!-- /.tt-col -->
