--- a/contact.html
+++ b/contact.html
@@ -152,11 +152,10 @@
 											===================================== -->
 											<ul class="tt-ol-menu-social">
 												<li><h6 class="tt-ol-menu-social-heading">Social Links:</h6></li>
-												<li><a href="https://www.facebook.com/themetorium" target="_blank" rel="noopener">Facebook</a></li>
-												<li><a href="https://twitter.com/Themetorium" target="_blank" rel="noopener">Twitter</a></li>
-												<li><a href="https://www.youtube.com/" target="_blank" rel="noopener">Youtube</a></li>
-												<li><a href="https://dribbble.com/Themetorium" target="_blank" rel="noopener">Dribbble</a></li>
-												<li><a href="https://www.behance.net/Themetorium" target="_blank" rel="noopener">Behance</a></li>
+												<li><a href="https://www.behance.net/jherron" target="_blank" rel="noopener">Behance</a></li>
+												<li><a href="https://www.linkedin.com/in/james-l-herron-iv-31422882/" target="_blank" rel="noopener">Linkedin</a></li>
+												<li><a href="https://www.instagram.com/timeless.louis/" target="_blank" rel="noopener">Instagram</a></li>
+												<li><a href="https://x.com/timeless_louis" target="_blank" rel="noopener">(X)Twitter</a></li>	
 											</ul>
 											<!-- End overlay menu social links -->
 
