--- a/contact.html
+++ b/contact.html
@@ -292,11 +292,10 @@
 												<!-- Begin social buttons -->
 												<div class="social-buttons">
 													<ul>
-														<li><div class="magnetic-wrap"><a href="https://www.facebook.com/themetorium" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-facebook-f"></i></a></div></li>
-														<li><div class="magnetic-wrap"><a href="https://twitter.com/Themetorium" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-twitter"></i></a></div></li>
-														<li><div class="magnetic-wrap"><a href="https://www.youtube.com/" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-youtube"></i></a></div></li>
-														<li><div class="magnetic-wrap"><a href="https://dribbble.com/Themetorium" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-dribbble"></i></a></div></li>
-														<li><div class="magnetic-wrap"><a href="https://www.behance.net/Themetorium" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-behance"></i></a></div></li>
+														<li><div class="magnetic-wrap"><a href="https://www.behance.net/jherron" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-behance"></i></a></div></li>
+														<li><div class="magnetic-wrap"><a href="https://www.linkedin.com/in/james-l-herron-iv-31422882/" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-linkedin"></i></a></div></li>
+														<li><div class="magnetic-wrap"><a href="https://www.instagram.com/timeless.louis/" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-instagram"></i></a></div></li>
+														<li><div class="magnetic-wrap"><a href="https://x.com/timeless_louis" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-x-twitter"></i></a></div></li>																																										
 													</ul>
 												</div>
 												<!-- End social buttons -->
