--- a/contact.html
+++ b/contact.html
@@ -295,7 +295,7 @@
 														<li><div class="magnetic-wrap"><a href="https://www.behance.net/jherron" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-behance"></i></a></div></li>
 														<li><div class="magnetic-wrap"><a href="https://www.linkedin.com/in/james-l-herron-iv-31422882/" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-linkedin"></i></a></div></li>
 														<li><div class="magnetic-wrap"><a href="https://www.instagram.com/timeless.louis/" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-instagram"></i></a></div></li>
-														<li><div class="magnetic-wrap"><a href="https://x.com/timeless_louis" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-x-twitter"></i></a></div></li>																																										
+														<li><div class="magnetic-wrap"><a href="https://x.com/timeless_louis" class="magnetic-item not-hide-cursor" target="_blank" rel="noopener" style=""><i class="fab fa-twitter"></i></a></div></li>																																										
 													</ul>
 												</div>
 												<!-- End social buttons -->
