--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 												<li class="active"><a href="about.html">About</a></li>
 												<li class="active"><a href="portfolio.html">Portfolio</a></li>
 												<li class="active"><a href="contact.html">Contact</a></li>
+												<li class="active"><a href="https://my.linkpod.site/James-L-Herron-CV">CV</a></li>
 											</ul>
 											<!-- End menu list -->
 
