--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@
 									<div class="tt-copyright text-gray">
 										<a href="https://timelesslouis.com" target="_blank" rel="noopener" class="tt-btn tt-btn-link">
 											<span class="tt-btn-icon"><i class="far fa-copyright"></i></span>
-											<div data-hover="Timelesslouis.com">Timelesslouis.com</div>
+											<div data-hover="Timelesslouis.com">2024 All rights resrved</div>
 										</a>
 									</div>
 
