--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							* Use class "tt-ol-menu-count" to enable menu counter.
 							-->
 							<nav class="tt-overlay-menu tt-ol-menu-count">
-								<div class="tt-ol-menu-ghost">Index</div>
+								<div class="tt-ol-menu-ghost">Home</div>
 								<div class="tt-ol-menu-holder">
 									<div class="tt-ol-menu-inner tt-wrap">
 										<div class="tt-ol-menu-content">
@@ -708,7 +708,7 @@
 									<div class="tt-copyright text-gray">
 										<a href="https://timelesslouis.com" target="_blank" rel="noopener" class="tt-btn tt-btn-link">
 											<span class="tt-btn-icon"><i class="far fa-copyright"></i></span>
-											<div data-hover="Timelesslouis.com">Timelesslouis.com</div>
+											<div data-hover="Timelesslouis.com">2024 All rights resrved</div>
 										</a>
 									</div>
 
