--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
 								<div class="text-xxlg">
 									<h2 class="anim-fadeinup">Hello, Friend!</h2>
 
-									<p class=”anim-fadeinup”>With seven years of experience in brand design, I specialize in working with fashion and e-commerce brands to elevate their market presence. My passion for innovation extends beyond design; I played a pivotal role in helping a non-profit organization raise half a million dollars to support children in probation and foster care.</p>
+									<p class="anim-fadeinup">With seven years of experience in brand design, I specialize in working with fashion and e-commerce brands to elevate their market presence. My passion for innovation extends beyond design; I played a pivotal role in helping a non-profit organization raise half a million dollars to support children in probation and foster care.</p>
 
 									<p class="anim-fadeinup">I thrive on bringing creative solutions to the marketplace that not only innovate daily life but also reshape how we view the world. My academic background in branding, combined with hands-on experience assisting founders and local businesses, has equipped me with the skills to help others recognize and harness the true value of their brands.</p>
 								</div>
